# runsetta

./: .checkov.yml  .dockerignore  .gitignore  LICENSE  README.md  cloudbuild.yaml  package.json  pyproject.toml  tsconfig.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/platform/: runtime-config.sh
.github/workflows/: apple.yml  cleanup-preview.yml  deploy-preview.yml  deploy-prod.yml  infrastructure.yml
.platform/: config.json
MirroringWorkoutsSample/: AppDelegate.swift  CoachAudioView.swift  MirroringWorkoutView.swift  MirroringWorkoutsSampleApp.swift  StartView.swift  SummaryView.swift
MirroringWorkoutsSample.xcodeproj/: project.pbxproj
Shared/: OpenAIService.swift
app/: server.py  speech.aac
apple/: Package.swift  README.md
apple/Apps/iOS/: RunsettaApp.swift
apple/Apps/watchOS/: RunsettaWatchApp.swift
coach-bennett/: README.md  pyproject.toml
coach-bennett/coach_bennett/: chain.py
hypercoach-app/: MirroringWorkoutsSample-Bridging-Header.h  README.md
hypercoach-app/MirroringWorkoutsSample/: Constants.swift  Info.plist  SceneDelegate.swift  ViewController.swift  ViewControllerWrapper.swift
hypercoach-app/Shared/: RequestModels.swift  ResponseModels.swift
hypercoach-gai/: README.md  pyproject.toml
hypercoach-gai/app/: server.py
hypercoach-templates/coach-bennett/: .gitignore
public/: index.html
public/assets/: styles.css
src/: agents.ts  audio.ts  client.ts  config.ts  contracts.ts  server.ts  spotify.ts
test/: agents.test.ts  server.test.ts
tools/: build.ts  lint.ts
(+13 files in other folders)
