[tool.poetry]
name = "hypercoach-gai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
coach-bennett = {path = "packages/coach-bennett", develop = true}
requests = "^2.31.0"
python-dotenv = "^1.0.1"
spotify-transition = {path = "packages/spotify-transition", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
